# rag_poc

./: .gitignore  chat_model.py  embedding_model.py  graph.py  model.py  pyproject.toml  response_node.py  retriever_node.py  router_node.py  run.py  user_input_node.py
data/: dedup_test_notes.json  evaluation_note_inputs.json
docs/: 1. Ingestion Pipeline Design.md  2 - LangGraph Query Pipeline Design.md  3 - ragas_retrieval_evaluation.md
scripts/: constants.py  run_action_item.py  run_evaluation_note_extraction.py  run_generate_embeddings.py  run_index_evaluation_notes.py  run_metadata_extraction.py  run_semantic_duplicate_check.py
src/aws/dynamodb/: client.py
src/graph/: constants.py
src/graph/action_item/: graph.py  nodes.py  prompts.py  schema.py  state.py
src/graph/config/: chat_model.py
src/graph/evaluation_note_extraction/: graph.py  nodes.py  prompts.py  schema.py  state.py
src/graph/metadata_extraction/: graph.py  nodes.py  prompts.py  schema.py  state.py
src/lambdas/: config.py  constants.py  exact_duplicate_check.py  generate_embeddings.py  index_evaluation_notes.py  semantic_duplicate_check.py
src/lambdas/normalize_and_hash/: constants.py  handler.py
tests/graph/evaluation_note_extraction/: test_graph.py  test_nodes.py
tests/graph/metadata_extraction/: test_nodes.py
tests/lambdas/: conftest.py  test_exact_duplicate_check.py  test_generate_embeddings.py  test_index_evaluation_notes.py  test_normalize_and_hash.py  test_semantic_duplicate_check.py
